[gd_scene load_steps=17 format=2]

[ext_resource path="res://scenes/enviroment/BasicTilemap.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/NPC.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://dialogue/DialoguePlayer.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/levels/Level5.gd" type="Script" id=5]
[ext_resource path="res://scenes/enviroment/Board.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/enemies/OrcMini.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/enviroment/Doors.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/enviroment/enemies/EnemyCollision.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/levels/ScriptedPath.gd" type="Script" id=10]
[ext_resource path="res://scenes/enviroment/Box.tscn" type="PackedScene" id=11]
[ext_resource path="res://scenes/enviroment/Trap.tscn" type="PackedScene" id=12]
[ext_resource path="res://scenes/enviroment/Torch.tscn" type="PackedScene" id=13]
[ext_resource path="res://scenes/enemies/OrcBasic.tscn" type="PackedScene" id=14]

[sub_resource type="CanvasItemMaterial" id=2]
light_mode = 2

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 64, 56, 0, 0, 0, 0, 120, 96 )
}

[node name="Level5" type="Node2D"]
script = ExtResource( 5 )
orc_mini_scene = ExtResource( 7 )
box_scene = ExtResource( 11 )

[node name="BasicTilemap" parent="." instance=ExtResource( 1 )]
material = SubResource( 2 )
position = Vector2( -16, -160 )
tile_data = PoolIntArray( -720895, 0, 0, -720894, 0, 1, -720893, 0, 1, -720892, 0, 2, -655360, 0, 0, -655359, 0, 65541, -655358, 0, 65537, -655357, 0, 65537, -655356, 0, 65540, -655355, 0, 2, -524289, 0, 0, -589824, 0, 65541, -589823, 0, 65537, -589822, 0, 65537, -589821, 0, 65537, -589820, 0, 65537, -589819, 0, 65540, -589818, 0, 2, -458754, 0, 0, -458753, 0, 65541, -524288, 0, 65537, -524287, 0, 65537, -524286, 0, 65537, -524285, 0, 65537, -524284, 0, 65537, -524283, 0, 65537, -524282, 0, 65540, -524281, 0, 2, -393219, 0, 0, -393218, 0, 65541, -393217, 0, 65537, -458752, 0, 65537, -458751, 0, 65537, -458750, 0, 65537, -458749, 0, 65537, -458748, 0, 65537, -458747, 0, 65537, -458746, 0, 196618, -458745, 0, 65540, -458744, 0, 2, -327684, 0, 0, -327683, 0, 65541, -327682, 0, 65537, -327681, 0, 65537, -393216, 0, 65537, -393215, 0, 65537, -393214, 0, 65537, -393213, 0, 65537, -393212, 0, 65537, -393211, 0, 65537, -393210, 0, 65537, -393209, 0, 65537, -393208, 0, 65540, -393207, 0, 2, -262149, 0, 0, -262148, 0, 65541, -262147, 0, 65537, -262146, 0, 65537, -262145, 0, 65537, -327680, 0, 65537, -327679, 0, 65537, -327678, 0, 65537, -327677, 0, 65537, -327676, 0, 65537, -327675, 0, 65537, -327674, 0, 65537, -327673, 0, 65537, -327672, 0, 65537, -327671, 0, 65540, -327670, 0, 2, -196613, 0, 65536, -196612, 0, 65537, -196611, 0, 65537, -196610, 0, 65537, -196609, 0, 65537, -262144, 0, 65537, -262143, 0, 65537, -262142, 0, 65537, -262141, 0, 65537, -262140, 0, 65537, -262139, 0, 65537, -262138, 0, 65537, -262137, 0, 65537, -262136, 0, 65537, -262135, 0, 65537, -262134, 0, 65538, -131077, 0, 65536, -131076, 0, 65537, -131075, 0, 262154, -131074, 0, 65537, -131073, 0, 65537, -196608, 0, 65537, -196607, 0, 65537, -196606, 0, 65537, -196605, 0, 65537, -196604, 0, 65537, -196603, 0, 65537, -196602, 0, 65537, -196601, 0, 65537, -196600, 0, 65537, -196599, 0, 65537, -196598, 0, 65538, -65541, 0, 131072, -65540, 0, 5, -65539, 0, 65537, -65538, 0, 65537, -65537, 0, 65537, -131072, 0, 65537, -131071, 0, 65537, -131070, 0, 65537, -131069, 0, 65537, -131068, 0, 65537, -131067, 0, 65537, -131066, 0, 65537, -131065, 0, 65537, -131064, 0, 65537, -131063, 0, 4, -131062, 0, 131074, -4, 0, 131072, -3, 0, 5, -2, 0, 65537, -1, 0, 65537, -65536, 0, 65537, -65535, 0, 65537, -65534, 0, 65537, -65533, 0, 65537, -65532, 0, 65537, -65531, 0, 196618, -65530, 0, 65537, -65529, 0, 65537, -65528, 0, 4, -65527, 0, 131074, 65534, 0, 5, 65535, 0, 65537, 0, 0, 65537, 1, 0, 65537, 2, 0, 65537, 3, 0, 65537, 4, 0, 65537, 5, 0, 65537, 6, 0, 65537, 7, 0, 4, 8, 0, 131074, 131070, 0, 131072, 131071, 0, 5, 65536, 0, 65537, 65537, 0, 65537, 65538, 0, 65537, 65539, 0, 65537, 65540, 0, 65537, 65541, 0, 65537, 65542, 0, 4, 65543, 0, 131074, 196607, 0, 131072, 131072, 0, 5, 131073, 0, 65537, 131074, 0, 65537, 131075, 0, 65537, 131076, 0, 65537, 131077, 0, 4, 131078, 0, 131074, 262112, 0, 0, 262113, 0, 1, 262114, 0, 1, 262115, 0, 1, 262116, 0, 1, 262117, 0, 1, 262118, 0, 1, 262119, 0, 1, 262120, 0, 1, 262121, 0, 1, 262122, 0, 1, 262123, 0, 1, 262124, 0, 1, 262125, 0, 1, 262126, 0, 1, 262127, 0, 1, 262128, 0, 1, 262129, 0, 1, 262130, 0, 2, 196608, 0, 131072, 196609, 0, 131073, 196610, 0, 131073, 196611, 0, 131073, 196612, 0, 131073, 196613, 0, 131074, 327648, 0, 65536, 327649, 0, 65537, 327650, 0, 65537, 327651, 0, 65537, 327652, 0, 65537, 327653, 0, 65537, 327654, 0, 65537, 327655, 0, 196618, 327656, 0, 65537, 327657, 0, 65537, 327658, 0, 65537, 327659, 0, 65537, 327660, 0, 65537, 327661, 0, 65537, 327662, 0, 65537, 327663, 0, 65537, 327664, 0, 65537, 327665, 0, 65537, 327666, 0, 65538, 393184, 0, 131072, 393185, 0, 5, 393186, 0, 65537, 393187, 0, 65537, 393188, 0, 65537, 393189, 0, 65537, 393190, 0, 65537, 393191, 0, 65537, 393192, 0, 65537, 393193, 0, 196618, 393194, 0, 65537, 393195, 0, 65537, 393196, 0, 65537, 393197, 0, 65537, 393198, 0, 65537, 393199, 0, 65537, 393200, 0, 65537, 393201, 0, 65537, 393202, 0, 65538, 458721, 0, 65536, 458722, 0, 196618, 458723, 0, 65537, 458724, 0, 65537, 458725, 0, 65537, 458726, 0, 65537, 458727, 0, 65537, 458728, 0, 65537, 458729, 0, 65537, 458730, 0, 65537, 458731, 0, 65537, 458732, 0, 4, 458733, 0, 131073, 458734, 0, 5, 458735, 0, 65537, 458736, 0, 65537, 458737, 0, 65537, 458738, 0, 65538, 524257, 0, 65536, 524258, 0, 65537, 524259, 0, 65537, 524260, 0, 65537, 524261, 0, 262154, 524262, 0, 65537, 524263, 0, 65537, 524264, 0, 262154, 524265, 0, 65537, 524266, 0, 65537, 524267, 0, 262154, 524268, 0, 65538, 524270, 0, 65536, 524271, 0, 65537, 524272, 0, 65537, 524273, 0, 65537, 524274, 0, 65538, 589793, 0, 65536, 589794, 0, 65537, 589795, 0, 65537, 589796, 0, 65537, 589797, 0, 65537, 589798, 0, 4, 589799, 0, 131073, 589800, 0, 5, 589801, 0, 65537, 589802, 0, 65537, 589803, 0, 65537, 589804, 0, 65540, 589805, 0, 1, 589806, 0, 65541, 589807, 0, 65537, 589808, 0, 65537, 589809, 0, 65537, 589810, 0, 65538, 655329, 0, 65536, 655330, 0, 65537, 655331, 0, 196618, 655332, 0, 262154, 655333, 0, 65537, 655334, 0, 65538, 655336, 0, 65536, 655337, 0, 65537, 655338, 0, 65537, 655339, 0, 196618, 655340, 0, 65537, 655341, 0, 65537, 655342, 0, 65537, 655343, 0, 65537, 655344, 0, 65537, 655345, 0, 65537, 655346, 0, 65538, 720864, 0, 0, 720865, 0, 65541, 720866, 0, 65537, 720867, 0, 65537, 720868, 0, 65537, 720869, 0, 65537, 720870, 0, 65538, 720872, 0, 65536, 720873, 0, 65537, 720874, 0, 65537, 720875, 0, 65537, 720876, 0, 65537, 720877, 0, 65537, 720878, 0, 65537, 720879, 0, 65537, 720880, 0, 65537, 720881, 0, 65537, 720882, 0, 65540, 720883, 0, 1, 720884, 0, 1, 720885, 0, 1, 720886, 0, 1, 720887, 0, 1, 720888, 0, 1, 720889, 0, 1, 720890, 0, 1, 720891, 0, 1, 720892, 0, 1, 720893, 0, 1, 720894, 0, 1, 720895, 0, 1, 655360, 0, 1, 655361, 0, 1, 655362, 0, 1, 655363, 0, 1, 655364, 0, 1, 655365, 0, 1, 655366, 0, 1, 655367, 0, 1, 655368, 0, 1, 655369, 0, 1, 655370, 0, 1, 655371, 0, 1, 655372, 0, 1, 655373, 0, 1, 655374, 0, 1, 655375, 0, 1, 655376, 0, 1, 655377, 0, 1, 655378, 0, 1, 655379, 0, 1, 655380, 0, 1, 655381, 0, 1, 655382, 0, 1, 655383, 0, 1, 655384, 0, 1, 655385, 0, 1, 655386, 0, 1, 655387, 0, 1, 655388, 0, 1, 655389, 0, 1, 655390, 0, 1, 655391, 0, 1, 655392, 0, 1, 655393, 0, 1, 655394, 0, 1, 655395, 0, 2, 786400, 0, 65536, 786401, 0, 65537, 786402, 0, 65537, 786403, 0, 65537, 786404, 0, 65537, 786405, 0, 65537, 786406, 0, 65540, 786407, 0, 1, 786408, 0, 65541, 786409, 0, 65537, 786410, 0, 65537, 786411, 0, 65537, 786412, 0, 65537, 786413, 0, 65537, 786414, 0, 65537, 786415, 0, 65537, 786416, 0, 65537, 786417, 0, 65537, 786418, 0, 65537, 786419, 0, 65537, 786420, 0, 65537, 786421, 0, 65537, 786422, 0, 262154, 786423, 0, 65537, 786424, 0, 65537, 786425, 0, 65537, 786426, 0, 65537, 786427, 0, 262154, 786428, 0, 65537, 786429, 0, 65537, 786430, 0, 65537, 786431, 0, 65537, 720896, 0, 65537, 720897, 0, 65537, 720898, 0, 65537, 720899, 0, 65537, 720900, 0, 65537, 720901, 0, 65537, 720902, 0, 65537, 720903, 0, 65537, 720904, 0, 65537, 720905, 0, 65537, 720906, 0, 65537, 720907, 0, 65537, 720908, 0, 65537, 720909, 0, 65537, 720910, 0, 65537, 720911, 0, 65537, 720912, 0, 65537, 720913, 0, 65537, 720914, 0, 65537, 720915, 0, 65537, 720916, 0, 65537, 720917, 0, 65537, 720918, 0, 65537, 720919, 0, 65537, 720920, 0, 65537, 720921, 0, 65537, 720922, 0, 65537, 720923, 0, 65537, 720924, 0, 65537, 720925, 0, 65537, 720926, 0, 65537, 720927, 0, 65537, 720928, 0, 65537, 720929, 0, 65537, 720930, 0, 65537, 720931, 0, 65538, 851936, 0, 131072, 851937, 0, 5, 851938, 0, 65537, 851939, 0, 65537, 851940, 0, 65537, 851941, 0, 65537, 851942, 0, 65537, 851943, 0, 65537, 851944, 0, 65537, 851945, 0, 65537, 851946, 0, 65537, 851947, 0, 65537, 851948, 0, 65537, 851949, 0, 65537, 851950, 0, 65537, 851951, 0, 65537, 851952, 0, 65537, 851953, 0, 65537, 851954, 0, 65537, 851955, 0, 65537, 851956, 0, 65537, 851957, 0, 65537, 851958, 0, 196618, 851959, 0, 65537, 851960, 0, 65537, 851961, 0, 65537, 851962, 0, 65537, 851963, 0, 65537, 851964, 0, 65537, 851965, 0, 65537, 851966, 0, 65537, 851967, 0, 65537, 786432, 0, 65537, 786433, 0, 65537, 786434, 0, 65537, 786435, 0, 65537, 786436, 0, 65537, 786437, 0, 65537, 786438, 0, 65537, 786439, 0, 65537, 786440, 0, 65537, 786441, 0, 65537, 786442, 0, 65537, 786443, 0, 65537, 786444, 0, 65537, 786445, 0, 65537, 786446, 0, 65537, 786447, 0, 65537, 786448, 0, 65537, 786449, 0, 65537, 786450, 0, 65537, 786451, 0, 65537, 786452, 0, 65537, 786453, 0, 65537, 786454, 0, 65537, 786455, 0, 65537, 786456, 0, 65537, 786457, 0, 65537, 786458, 0, 262154, 786459, 0, 65537, 786460, 0, 65537, 786461, 0, 65537, 786462, 0, 65537, 786463, 0, 65537, 786464, 0, 65537, 786465, 0, 65537, 786466, 0, 65537, 786467, 0, 65538, 917473, 0, 65536, 917474, 0, 65537, 917475, 0, 65537, 917476, 0, 65537, 917477, 0, 65537, 917478, 0, 65537, 917479, 0, 65537, 917480, 0, 65537, 917481, 0, 65537, 917482, 0, 65537, 917483, 0, 65537, 917484, 0, 65537, 917485, 0, 65537, 917486, 0, 65537, 917487, 0, 65537, 917488, 0, 65537, 917489, 0, 262154, 917490, 0, 4, 917491, 0, 131073, 917492, 0, 131073, 917493, 0, 131073, 917494, 0, 131073, 917495, 0, 131073, 917496, 0, 131073, 917497, 0, 131073, 917498, 0, 131073, 917499, 0, 131073, 917500, 0, 131073, 917501, 0, 131073, 917502, 0, 131073, 917503, 0, 5, 851968, 0, 65537, 851969, 0, 65537, 851970, 0, 65537, 851971, 0, 65537, 851972, 0, 65537, 851973, 0, 65537, 851974, 0, 4, 851975, 0, 131073, 851976, 0, 131073, 851977, 0, 131073, 851978, 0, 131073, 851979, 0, 131073, 851980, 0, 131073, 851981, 0, 5, 851982, 0, 65537, 851983, 0, 4, 851984, 0, 131073, 851985, 0, 131073, 851986, 0, 131073, 851987, 0, 131073, 851988, 0, 131073, 851989, 0, 131073, 851990, 0, 131073, 851991, 0, 131073, 851992, 0, 131073, 851993, 0, 131073, 851994, 0, 131073, 851995, 0, 131073, 851996, 0, 131073, 851997, 0, 131073, 851998, 0, 131073, 851999, 0, 131073, 852000, 0, 5, 852001, 0, 65537, 852002, 0, 65537, 852003, 0, 65538, 983009, 0, 65536, 983010, 0, 65537, 983011, 0, 65537, 983012, 0, 65537, 983013, 0, 65537, 983014, 0, 65537, 983015, 0, 65537, 983016, 0, 65537, 983017, 0, 65537, 983018, 0, 196618, 983019, 0, 4, 983020, 0, 131073, 983021, 0, 5, 983022, 0, 65537, 983023, 0, 65537, 983024, 0, 65537, 983025, 0, 65537, 983026, 0, 65538, 983039, 0, 65536, 917504, 0, 65537, 917505, 0, 65537, 917506, 0, 262154, 917507, 0, 65537, 917508, 0, 65537, 917509, 0, 65537, 917510, 0, 65538, 917517, 0, 65536, 917518, 0, 65537, 917519, 0, 65538, 917536, 0, 65536, 917537, 0, 65537, 917538, 0, 65537, 917539, 0, 65538, 1048545, 0, 65536, 1048546, 0, 65537, 1048547, 0, 65537, 1048548, 0, 65537, 1048549, 0, 65537, 1048550, 0, 65537, 1048551, 0, 65537, 1048552, 0, 65537, 1048553, 0, 65537, 1048554, 0, 65537, 1048555, 0, 65538, 1048557, 0, 65536, 1048558, 0, 65537, 1048559, 0, 65537, 1048560, 0, 65537, 1048561, 0, 65537, 1048562, 0, 65538, 1048575, 0, 131072, 983040, 0, 131073, 983041, 0, 5, 983042, 0, 65537, 983043, 0, 65537, 983044, 0, 4, 983045, 0, 131073, 983046, 0, 131074, 983053, 0, 65536, 983054, 0, 65537, 983055, 0, 65538, 983072, 0, 65536, 983073, 0, 65537, 983074, 0, 65537, 983075, 0, 65538, 1114081, 0, 65536, 1114082, 0, 65537, 1114083, 0, 65537, 1114084, 0, 65537, 1114085, 0, 65537, 1114086, 0, 4, 1114087, 0, 131073, 1114088, 0, 5, 1114089, 0, 262154, 1114090, 0, 65537, 1114091, 0, 65540, 1114092, 0, 1, 1114093, 0, 65541, 1114094, 0, 65537, 1114095, 0, 65537, 1114096, 0, 262154, 1114097, 0, 65537, 1114098, 0, 65538, 1048577, 0, 65536, 1048578, 0, 65537, 1048579, 0, 65537, 1048580, 0, 65538, 1048589, 0, 65536, 1048590, 0, 65537, 1048591, 0, 65538, 1048608, 0, 65536, 1048609, 0, 262154, 1048610, 0, 65537, 1048611, 0, 65538, 1179617, 0, 65536, 1179618, 0, 65537, 1179619, 0, 65537, 1179620, 0, 65537, 1179621, 0, 65537, 1179622, 0, 65538, 1179624, 0, 65536, 1179625, 0, 65537, 1179626, 0, 65537, 1179627, 0, 65537, 1179628, 0, 65537, 1179629, 0, 65537, 1179630, 0, 65537, 1179631, 0, 65537, 1179632, 0, 65537, 1179633, 0, 65537, 1179634, 0, 65538, 1114113, 0, 65536, 1114114, 0, 65537, 1114115, 0, 65537, 1114116, 0, 65538, 1114125, 0, 65536, 1114126, 0, 65537, 1114127, 0, 65538, 1114144, 0, 65536, 1114145, 0, 65537, 1114146, 0, 65537, 1114147, 0, 65538, 1245152, 0, 0, 1245153, 0, 65541, 1245154, 0, 65537, 1245155, 0, 65537, 1245156, 0, 65537, 1245157, 0, 65537, 1245158, 0, 65540, 1245159, 0, 1, 1245160, 0, 65541, 1245161, 0, 65537, 1245162, 0, 65537, 1245163, 0, 65537, 1245164, 0, 262154, 1245165, 0, 65537, 1245166, 0, 65537, 1245167, 0, 65537, 1245168, 0, 65537, 1245169, 0, 65537, 1245170, 0, 65538, 1179649, 0, 65536, 1179650, 0, 65537, 1179651, 0, 65537, 1179652, 0, 65538, 1179661, 0, 65536, 1179662, 0, 65537, 1179663, 0, 65538, 1179680, 0, 65536, 1179681, 0, 65537, 1179682, 0, 65537, 1179683, 0, 65538, 1310688, 0, 65536, 1310689, 0, 196618, 1310690, 0, 65537, 1310691, 0, 65537, 1310692, 0, 65537, 1310693, 0, 65537, 1310694, 0, 65537, 1310695, 0, 65537, 1310696, 0, 65537, 1310697, 0, 65537, 1310698, 0, 65537, 1310699, 0, 65537, 1310700, 0, 65537, 1310701, 0, 65537, 1310702, 0, 65537, 1310703, 0, 65537, 1310704, 0, 65537, 1310705, 0, 65537, 1310706, 0, 65538, 1245185, 0, 65536, 1245186, 0, 65537, 1245187, 0, 65537, 1245188, 0, 65538, 1245197, 0, 65536, 1245198, 0, 65537, 1245199, 0, 65538, 1245216, 0, 65536, 1245217, 0, 65537, 1245218, 0, 65537, 1245219, 0, 65538, 1376224, 0, 131072, 1376225, 0, 131073, 1376226, 0, 131073, 1376227, 0, 131073, 1376228, 0, 131073, 1376229, 0, 131073, 1376230, 0, 131073, 1376231, 0, 131073, 1376232, 0, 131073, 1376233, 0, 131073, 1376234, 0, 131073, 1376235, 0, 131073, 1376236, 0, 131073, 1376237, 0, 131073, 1376238, 0, 131073, 1376239, 0, 131073, 1376240, 0, 131073, 1376241, 0, 131073, 1376242, 0, 131074, 1310721, 0, 65536, 1310722, 0, 65537, 1310723, 0, 65537, 1310724, 0, 65538, 1310733, 0, 65536, 1310734, 0, 65537, 1310735, 0, 65540, 1310736, 0, 1, 1310737, 0, 1, 1310738, 0, 1, 1310739, 0, 1, 1310740, 0, 1, 1310741, 0, 1, 1310742, 0, 1, 1310743, 0, 1, 1310744, 0, 1, 1310745, 0, 1, 1310746, 0, 1, 1310747, 0, 1, 1310748, 0, 1, 1310749, 0, 1, 1310750, 0, 1, 1310751, 0, 1, 1310752, 0, 65541, 1310753, 0, 65537, 1310754, 0, 262154, 1310755, 0, 65538, 1376257, 0, 65536, 1376258, 0, 65537, 1376259, 0, 65537, 1376260, 0, 65538, 1376269, 0, 65536, 1376270, 0, 65537, 1376271, 0, 262154, 1376272, 0, 65537, 1376273, 0, 65537, 1376274, 0, 65537, 1376275, 0, 65537, 1376276, 0, 65537, 1376277, 0, 65537, 1376278, 0, 65537, 1376279, 0, 65537, 1376280, 0, 65537, 1376281, 0, 65537, 1376282, 0, 65537, 1376283, 0, 65537, 1376284, 0, 65537, 1376285, 0, 65537, 1376286, 0, 65537, 1376287, 0, 65537, 1376288, 0, 65537, 1376289, 0, 65537, 1376290, 0, 65537, 1376291, 0, 65538, 1441793, 0, 65536, 1441794, 0, 65537, 1441795, 0, 65537, 1441796, 0, 65538, 1441805, 0, 131072, 1441806, 0, 131073, 1441807, 0, 131073, 1441808, 0, 131073, 1441809, 0, 131073, 1441810, 0, 131073, 1441811, 0, 131073, 1441812, 0, 131073, 1441813, 0, 131073, 1441814, 0, 131073, 1441815, 0, 131073, 1441816, 0, 131073, 1441817, 0, 131073, 1441818, 0, 131073, 1441819, 0, 131073, 1441820, 0, 131073, 1441821, 0, 131073, 1441822, 0, 131073, 1441823, 0, 131073, 1441824, 0, 131073, 1441825, 0, 131073, 1441826, 0, 131073, 1441827, 0, 131074, 1507329, 0, 65536, 1507330, 0, 65537, 1507331, 0, 65537, 1507332, 0, 65538, 1572865, 0, 65536, 1572866, 0, 65537, 1572867, 0, 65537, 1572868, 0, 65538, 1703926, 0, 0, 1703927, 0, 1, 1703928, 0, 1, 1703929, 0, 1, 1703930, 0, 1, 1703931, 0, 1, 1703932, 0, 1, 1703933, 0, 1, 1703934, 0, 1, 1703935, 0, 1, 1638400, 0, 1, 1638401, 0, 65541, 1638402, 0, 196618, 1638403, 0, 65537, 1638404, 0, 65540, 1638405, 0, 1, 1638406, 0, 1, 1638407, 0, 1, 1638408, 0, 1, 1638409, 0, 1, 1638410, 0, 1, 1638411, 0, 1, 1638412, 0, 1, 1638413, 0, 1, 1638414, 0, 1, 1638415, 0, 2, 1769462, 0, 65536, 1769463, 0, 65537, 1769464, 0, 262154, 1769465, 0, 65537, 1769466, 0, 65537, 1769467, 0, 65537, 1769468, 0, 65537, 1769469, 0, 65537, 1769470, 0, 65537, 1769471, 0, 65537, 1703936, 0, 65537, 1703937, 0, 65537, 1703938, 0, 65537, 1703939, 0, 65537, 1703940, 0, 65537, 1703941, 0, 65537, 1703942, 0, 65537, 1703943, 0, 65537, 1703944, 0, 65537, 1703945, 0, 65537, 1703946, 0, 65537, 1703947, 0, 65537, 1703948, 0, 65537, 1703949, 0, 262154, 1703950, 0, 65537, 1703951, 0, 65538, 1834998, 0, 65536, 1834999, 0, 65537, 1835000, 0, 65537, 1835001, 0, 65537, 1835002, 0, 65537, 1835003, 0, 65537, 1835004, 0, 65537, 1835005, 0, 65537, 1835006, 0, 196618, 1835007, 0, 65537, 1769472, 0, 65537, 1769473, 0, 65537, 1769474, 0, 65537, 1769475, 0, 65537, 1769476, 0, 65537, 1769477, 0, 65537, 1769478, 0, 65537, 1769479, 0, 65537, 1769480, 0, 65537, 1769481, 0, 65537, 1769482, 0, 65537, 1769483, 0, 65537, 1769484, 0, 65537, 1769485, 0, 65537, 1769486, 0, 65537, 1769487, 0, 65538, 1900534, 0, 131072, 1900535, 0, 131073, 1900536, 0, 131073, 1900537, 0, 131073, 1900538, 0, 5, 1900539, 0, 65537, 1900540, 0, 65537, 1900541, 0, 65537, 1900542, 0, 65537, 1900543, 0, 65537, 1835008, 0, 65537, 1835009, 0, 65537, 1835010, 0, 65537, 1835011, 0, 65537, 1835012, 0, 65537, 1835013, 0, 65537, 1835014, 0, 65537, 1835015, 0, 65537, 1835016, 0, 65537, 1835017, 0, 65537, 1835018, 0, 65537, 1835019, 0, 4, 1835020, 0, 131073, 1835021, 0, 131073, 1835022, 0, 131073, 1835023, 0, 131074, 1966074, 0, 131072, 1966075, 0, 131073, 1966076, 0, 131073, 1966077, 0, 131073, 1966078, 0, 131073, 1966079, 0, 131073, 1900544, 0, 131073, 1900545, 0, 131073, 1900546, 0, 131073, 1900547, 0, 131073, 1900548, 0, 131073, 1900549, 0, 131073, 1900550, 0, 131073, 1900551, 0, 131073, 1900552, 0, 131073, 1900553, 0, 131073, 1900554, 0, 131073, 1900555, 0, 131074 )

[node name="checkpoints" type="Node" parent="."]

[node name="boards" type="Node" parent="."]

[node name="Board" parent="boards" instance=ExtResource( 6 )]
position = Vector2( 8, 16 )

[node name="DialoguePlayer" parent="boards/Board" instance=ExtResource( 4 )]
dialogue_file = "res://dialogue/dialogue_data/level_5/board_2.json"

[node name="Board2" parent="boards" instance=ExtResource( 6 )]
position = Vector2( 56, 16 )

[node name="DialoguePlayer" parent="boards/Board2" instance=ExtResource( 4 )]
dialogue_file = "res://dialogue/dialogue_data/level_5/board_1.json"

[node name="enemy_collisions" type="Node" parent="."]

[node name="EnemyCollision2" parent="enemy_collisions" instance=ExtResource( 9 )]
position = Vector2( -40, 272 )

[node name="EnemyCollision4" parent="enemy_collisions" instance=ExtResource( 9 )]
position = Vector2( 32, 272 )

[node name="EnemyCollision3" parent="enemy_collisions" instance=ExtResource( 9 )]
position = Vector2( 112, 272 )

[node name="enemies" type="Node" parent="."]

[node name="left_corridor" type="Node" parent="enemies"]

[node name="1" type="Node" parent="enemies/left_corridor"]

[node name="Position2D" type="Position2D" parent="enemies/left_corridor/1"]
position = Vector2( -272, -80 )

[node name="Position2D2" type="Position2D" parent="enemies/left_corridor/1"]
position = Vector2( -368, -80 )

[node name="Position2D3" type="Position2D" parent="enemies/left_corridor/1"]
position = Vector2( -440, -80 )

[node name="2" type="Node" parent="enemies/left_corridor"]

[node name="Position2D4" type="Position2D" parent="enemies/left_corridor/2"]
position = Vector2( -464, -48 )

[node name="Position2D5" type="Position2D" parent="enemies/left_corridor/2"]
position = Vector2( -376, -48 )

[node name="Position2D3" type="Position2D" parent="enemies/left_corridor/2"]
position = Vector2( -464, 24 )

[node name="3" type="Node" parent="enemies/left_corridor"]

[node name="Position2D2" type="Position2D" parent="enemies/left_corridor/3"]
position = Vector2( -344, 8 )

[node name="Position2D3" type="Position2D" parent="enemies/left_corridor/3"]
position = Vector2( -320, 40 )

[node name="Position2D" type="Position2D" parent="enemies/left_corridor/3"]
position = Vector2( -296, 8 )

[node name="4" type="Node" parent="enemies/left_corridor"]

[node name="Position2D5" type="Position2D" parent="enemies/left_corridor/4"]
position = Vector2( -384, 64 )

[node name="Position2D4" type="Position2D" parent="enemies/left_corridor/4"]
position = Vector2( -456, 72 )

[node name="Position2D6" type="Position2D" parent="enemies/left_corridor/4"]
position = Vector2( -432, 48 )

[node name="5" type="Node" parent="enemies/left_corridor"]

[node name="Position2D5" type="Position2D" parent="enemies/left_corridor/5"]
position = Vector2( -264, 112 )

[node name="Position2D4" type="Position2D" parent="enemies/left_corridor/5"]
position = Vector2( -288, 136 )

[node name="Position2D6" type="Position2D" parent="enemies/left_corridor/5"]
position = Vector2( -328, 136 )

[node name="6" type="Node" parent="enemies/left_corridor"]

[node name="Position2D5" type="Position2D" parent="enemies/left_corridor/6"]
position = Vector2( -464, 104 )

[node name="Position2D4" type="Position2D" parent="enemies/left_corridor/6"]
position = Vector2( -464, 136 )

[node name="Position2D6" type="Position2D" parent="enemies/left_corridor/6"]
position = Vector2( -408, 152 )

[node name="OrcMini" parent="enemies" instance=ExtResource( 7 )]
position = Vector2( -184, 40 )
is_moving = false

[node name="Enemy" parent="enemies" instance=ExtResource( 14 )]
position = Vector2( -128, 280 )

[node name="Enemy2" parent="enemies" instance=ExtResource( 14 )]
position = Vector2( 0, 280 )

[node name="Enemy3" parent="enemies" instance=ExtResource( 14 )]
position = Vector2( 96, 280 )

[node name="Enemy4" parent="enemies" instance=ExtResource( 14 )]
position = Vector2( 144, 280 )

[node name="npcs" type="Node" parent="."]

[node name="NPC_nearEnd" parent="npcs" instance=ExtResource( 2 )]
position = Vector2( 232, -72 )
is_start_left = false
deactivate = true

[node name="DialoguePlayer" parent="npcs/NPC_nearEnd" instance=ExtResource( 4 )]
dialogue_file = "res://dialogue/dialogue_data/level_4/npc_end.json"

[node name="Path2D" type="Path2D" parent="npcs"]
position = Vector2( 88, 48 )
curve = SubResource( 1 )
script = ExtResource( 10 )
walk_speed_npc = 40.0

[node name="PathFollow2D" type="PathFollow2D" parent="npcs/Path2D"]
position = Vector2( 64, 56 )
rotate = false
loop = false

[node name="NPC_First" parent="npcs/Path2D/PathFollow2D" instance=ExtResource( 2 )]
visible = false
is_start_left = false
deactivate = true

[node name="DialoguePlayer" parent="npcs/Path2D/PathFollow2D/NPC_First" instance=ExtResource( 4 )]
dialogue_file = "res://dialogue/dialogue_data/level_4/npc_start.json"

[node name="torches" type="Node" parent="."]

[node name="Torch" parent="torches" instance=ExtResource( 13 )]
position = Vector2( 72, 8 )

[node name="Torch2" parent="torches" instance=ExtResource( 13 )]
position = Vector2( -8, 8 )

[node name="trapes" type="Node" parent="."]

[node name="Trap" parent="trapes" instance=ExtResource( 12 )]
position = Vector2( 272, 32 )

[node name="Trap2" parent="trapes" instance=ExtResource( 12 )]
position = Vector2( 272, 48 )

[node name="Trap3" parent="trapes" instance=ExtResource( 12 )]
position = Vector2( 288, 32 )

[node name="Trap4" parent="trapes" instance=ExtResource( 12 )]
position = Vector2( 288, 48 )

[node name="Trap5" parent="trapes" instance=ExtResource( 12 )]
position = Vector2( 304, 32 )

[node name="Trap6" parent="trapes" instance=ExtResource( 12 )]
position = Vector2( 320, 32 )

[node name="Trap7" parent="trapes" instance=ExtResource( 12 )]
position = Vector2( 320, 48 )

[node name="Trap8" parent="trapes" instance=ExtResource( 12 )]
position = Vector2( 336, 48 )

[node name="Trap9" parent="trapes" instance=ExtResource( 12 )]
position = Vector2( 336, 32 )

[node name="Trap10" parent="trapes" instance=ExtResource( 12 )]
position = Vector2( 368, 48 )

[node name="Trap11" parent="trapes" instance=ExtResource( 12 )]
position = Vector2( 400, 48 )

[node name="Trap12" parent="trapes" instance=ExtResource( 12 )]
position = Vector2( 400, 32 )

[node name="Trap13" parent="trapes" instance=ExtResource( 12 )]
position = Vector2( 368, 32 )

[node name="Trap14" parent="trapes" instance=ExtResource( 12 )]
position = Vector2( 416, 32 )

[node name="Trap15" parent="trapes" instance=ExtResource( 12 )]
position = Vector2( 416, 48 )

[node name="Trap16" parent="trapes" instance=ExtResource( 12 )]
position = Vector2( 432, 48 )

[node name="Trap17" parent="trapes" instance=ExtResource( 12 )]
position = Vector2( 448, 48 )

[node name="Trap18" parent="trapes" instance=ExtResource( 12 )]
position = Vector2( 464, 48 )

[node name="Trap19" parent="trapes" instance=ExtResource( 12 )]
position = Vector2( 464, 32 )

[node name="Trap20" parent="trapes" instance=ExtResource( 12 )]
position = Vector2( 480, 32 )

[node name="Trap21" parent="trapes" instance=ExtResource( 12 )]
position = Vector2( 480, 48 )

[node name="Trap22" parent="trapes" instance=ExtResource( 12 )]
position = Vector2( 480, 48 )

[node name="triggers" type="Node" parent="."]

[node name="boxes" type="Node" parent="."]

[node name="Box" parent="boxes" instance=ExtResource( 11 )]
position = Vector2( 32, 288 )

[node name="Box2" parent="boxes" instance=ExtResource( 11 )]
position = Vector2( 528, 32 )

[node name="left_corridor" type="Node" parent="boxes"]

[node name="Position2D" type="Position2D" parent="boxes/left_corridor"]
position = Vector2( -504, -80 )

[node name="Position2D2" type="Position2D" parent="boxes/left_corridor"]
position = Vector2( -504, 32 )

[node name="Position2D3" type="Position2D" parent="boxes/left_corridor"]
position = Vector2( -504, 160 )

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( -56, 40 )
god_mode = true

[node name="Doors" parent="." instance=ExtResource( 8 )]
position = Vector2( -1, 20 )
[connection signal="dialogue_finished" from="npcs/NPC_nearEnd/DialoguePlayer" to="." method="_on_DialoguePlayer_dialogue_finished"]
[connection signal="path_ended" from="npcs/Path2D" to="." method="_on_Path2D_path_ended"]
[connection signal="dialogue_finished" from="npcs/Path2D/PathFollow2D/NPC_First/DialoguePlayer" to="." method="_on_DialoguePlayer_dialogue_finished"]
[connection signal="box_opened" from="boxes/Box" to="." method="_on_Box_box_opened"]
[connection signal="box_opened" from="boxes/Box2" to="." method="_on_Box_box_opened"]
